SVG scrolling anchor should be reset if the fragmentIdentifier does not exist or is not provided https://bugs.webkit.org/show_bug.cgi?id=176577

Patch by Said Abou-Hallawa <sabouhallawa@apple.com> on 2017-11-17
Reviewed by Simon Fraser.

Source/WebCore:

Because the SVGImage can be cached only once but used multiple times with
different fragmentIdentifiers, SVGImage has to call FrameView::scrollToFragment()
before the image is displayed. If the fragmentIdentifier is not provided
in the URL or it does not exist in the SVGImage, FrameView::scrollToFragment()
has to reset the scrolling anchor of the SVG as if it was not displayed before.
We do not want the previous scrolling anchor to be used when the FrameView
of SVGImage can't scroll to the current fragmentIdentifier for any reason.

Test: http/tests/svg/svg-fragment-url-special-cases.html

* page/FrameView.cpp:
(WebCore::FrameView::scrollToFragment):
(WebCore::FrameView::scrollToAnchor):
(WebCore::FrameView::resetScrollAnchor):
* page/FrameView.h:
* platform/URL.cpp:
(WebCore::URL::fragmentIdentifier const): Call hasFragmentIdentifier()
instead of repeating the same condition.
(WebCore::decodeURLEscapeSequences):
* svg/SVGSVGElement.cpp:
(WebCore::SVGSVGElement::findViewAnchor const):
(WebCore::SVGSVGElement::findRootAnchor const):
(WebCore::SVGSVGElement::scrollToAnchor): We want to know whether the SVG
root element could scroll to the fragmentIdentifier or not. If it could not,
FrameView::scrollToAnchor() can still try one last time to do the scrolling
only if anchorElement is not nullptr.
(WebCore::SVGSVGElement::resetScrollAnchor): Reset the FrameView scrolling
state to its initial value.
* svg/SVGSVGElement.h:

LayoutTests:

* http/tests/svg/svg-fragment-url-special-cases-expected.html: Added.
* http/tests/svg/svg-fragment-url-special-cases.html: Added.

Canonical link: https://commits.webkit.org/195844@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@224973 268f45cc-cd09-0410-ab3c-d52691b4dbfc